testsuite/lab2-testsuite/bad/arith_if_bool_min_bool.cc
int main () {
  if (false - true)
	let int x = 45;
  else { }
  return 0;
}
